[build-system]
requires = ["hatchling", "xmltodict==0.13.0"]
build-backend = "hatchling.build"

[project]
name = "yamlify"
version = "1.5.0"
authors = [
  { name="Wahyu Krisna Aji", email="wahyukrisnaaji32@gmail.com" },
]
description = "Effortlessly Convert Between Data Formats with YAMLify YAMLify is your one-stop solution for seamless conversion between YAML, JSON, and XML formats."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/aliftech/YAMLify"
"Bug Tracker" = "https://github.com/aliftech/YAMLify/issues"