[build-system]
requires = ["hatchling", "xmltodict==0.13.0"]
build-backend = "hatchling.build"

[project]
name = "FormatFusion"
version = "0.2.3"
authors = [
  { name="Wahyu Krisna Aji", email="wahyukrisnaaji32@gmail.com" },
]
description = "Effortlessly Convert Between Data Formats with FormatFusion. FormatFusion is your one-stop solution for seamless conversion between YAML, JSON, XML, and CSV formats."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.urls]
"Homepage" = "https://github.com/aliftech/FormatFusion"
"Bug Tracker" = "https://github.com/aliftech/FormatFusion/issues"